cleaned up computation of live intervals and migration to enhanced switch statements